--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
-    "express": "^4.17.1",
-    "node-fetch": "^3.1.0"
+    "express": "^4.17.1"
   }
 }
