--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "firebase": "^9.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^2.6.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
