--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-icons": "^4.3.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
