--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^9.6.0",
     "react": "^17.0.2",
+    "react-day-picker": "^7.0.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-icons": "^4.3.1",
