--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.1.5",
+    "mongoose-findorcreate": "^3.0.0",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
