--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
