--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-day-picker": "^7.0.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.0.2",
