--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.1.5",
-    "mongoose-findorcreate": "^3.0.0"
+    "mongoose-findorcreate": "^3.0.0",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
