--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-geocode": "^0.2.3",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
