--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "proxy": "http://localhost:3000",
   "dependencies": {
     "axios": "^0.24.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.1.5",
-    "mongoose-findorcreate": "^3.0.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "googleapis": "39",
+    "mongoose": "^6.1.5",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0"
   }
