--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.22.1",
     "googleapis": "^39.2.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-big-calendar": "^0.38.9",
     "react-day-picker": "^7.0.0",
     "react-dom": "^17.0.2",
