--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "proxy": "http://localhost:3000",
   "dependencies": {
     "axios": "^0.24.0",
     "cookie-session": "^1.4.0",
@@ -21,6 +20,7 @@
     "mongoose": "^6.1.5",
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.5.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "path": "^0.12.7"
   }
 }
